| Bug #20141 | User-defined variables are not replicated properly for SF/Triggers in SBR mode | ||
|---|---|---|---|
| Submitted: | 30 May 2006 11:34 | Modified: | 9 Mar 2007 15:31 |
| Reporter: | Alexey Stroganov | ||
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 5.0.21, 5.1.9 | OS: | Any (All) |
| Assigned to: | Chuck Bell | Target Version: | |
| Tags: | bfsm_2006_11_02 | ||
[30 May 2006 11:34]
Alexey Stroganov
[30 May 2006 11:36]
Alexey Stroganov
Test case and result file for reported bug
Attachment: rpl_user_variables2.tar.gz (application/x-gzip, text), 690 bytes.
[3 Jan 2007 16:52]
Lars Thalmann
See also BUG#14914.
[3 Jan 2007 17:12]
Lars Thalmann
Chuck, please check that this patch does not hinder any solution for BUG#25167.
[8 Mar 2007 9:01]
Andrei Elkin
fixed in 5.0.38,5.1.17-beta
[8 Mar 2007 9:06]
Andrei Elkin
"fixed" above meant pushed
[9 Mar 2007 15:31]
MC Brown
A note has been added to the 5.0.38 and 5.1.17 changelogs.
